2.4. HabrCareerParse [#285213 #414390]